--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0",
     "reload": "^1.1.1",
     "serve-static": "^1.12.1",
     "webpack": "^2.2.1"
